--- a/src/components/ZiaSymbol.css
+++ b/src/components/ZiaSymbol.css
@@ -3,9 +3,15 @@
     width: 100px;
     height: 100px;
     --zia-color: #b95e7c;
-    margin-left: -75px;
+    margin-left: -60px;
     margin-top: -25px;
 }
+
+@media (min-width: 700px) {
+  .zia {
+    margin-left: -75px;
+  }
+} 
 
 /* Center circle */
 .center {
@@ -84,11 +90,23 @@
   width: 650px;
   max-width: 90vw;
   right: 0;
-  transform: translateX(90%) translateY(-50%) rotate(180deg);
+  transform: translateX(80%) translateY(-50%) rotate(180deg);
   box-shadow:
       -8px -8px 0 var(--zia-color), 
       -8px -16px 0 var(--zia-color), 
       0px -24px 0 var(--zia-color)
+}
+
+@media (min-width: 450px) {
+    .arm.long-right {
+      transform: translateX(85%) translateY(-50%) rotate(180deg);
+    }
+  } 
+
+@media (min-width: 600px) {
+  .arm.long-right {
+    transform: translateX(90%) translateY(-50%) rotate(180deg);
+  }
 }
 
 .zia .note {
